Сделал страницы блока поиска работ 404 акции

--- a/src/html/components/_news-sections.htm
+++ b/src/html/components/_news-sections.htm
@@ -22,7 +22,7 @@
             <div class="news__slider swiper">
                 <div class="news__wrapper swiper-wrapper">
                     <div class="news__slide swiper-slide">
-                        <div class="news__card">
+                        <article class="news__card">
                             <div class="media">
                                 <picture class="lazy image--cover">
                                     <img data-src="@img/news.jpg" class="image lazy__item" alt="">
@@ -36,10 +36,10 @@
                                 <span>Подробнее</span>
                                 <a href="" class="link-stretched"></a>
                             </div>
-                        </div>
+                        </article>
                     </div>
                     <div class="news__slide swiper-slide">
-                        <div class="news__card">
+                        <article class="news__card">
                             <div class="media">
                                 <picture class="lazy image--cover">
                                     <img data-src="@img/news.jpg" class="image lazy__item" alt="">
@@ -53,10 +53,10 @@
                                 <span class="link-accent">Подробнее</span>
                                 <a href="" class="link-stretched"></a>
                             </div>
-                        </div>
+                        </article>
                     </div>
                     <div class="news__slide swiper-slide">
-                        <div class="news__card">
+                        <article class="news__card">
                             <div class="media">
                                 <picture class="lazy image--cover">
                                     <img data-src="@img/news.jpg" class="image lazy__item" alt="">
@@ -70,7 +70,7 @@
                                 <span class="link-accent">Подробнее</span>
                                 <a href="" class="link-stretched"></a>
                             </div>
-                        </div>
+                        </article>
                     </div>
                 </div>
             </div>
