--- a/src/html/components/_page-sales.htm
+++ b/src/html/components/_page-sales.htm
@@ -1,9 +1,270 @@
-<section class="sales">
+<section class="page-sales">
     <div class="sales-container">
         <div class="sections__header">
             <div class="title">
                 <span>@@title</span>
             </div>
         </div>
+        <div class="sales__body">
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-1.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit.</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-2.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-3.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-4.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-1.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-2.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-3.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-4.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-1.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+            <article class="sales__item">
+                <div class="sales__media">
+                    <picture class="lazy image--cover">
+                        <img data-src="@img/sales-1.jpg" class="image lazy__item" alt="">
+                    </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
+                </div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
+                </div>
+            </article>
+
+        </div>
+        @@include('_pagination.htm',{})
     </div>
 </section>
