--- a/src/html/components/_main-sales.htm
+++ b/src/html/components/_main-sales.htm
@@ -12,10 +12,22 @@
                     <picture class="lazy image--cover">
                         <img data-src="@img/sales-1.jpg" class="image lazy__item" alt="">
                     </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
                 </div>
-                <div class="sales__content">
-                    <div class="name">Протезирвание с опорой на импланты</div>
-                    <div class="price">Скидка 30%</div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit.</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
                 </div>
             </article>
             <article class="sales__item">
@@ -23,11 +35,25 @@
                     <picture class="lazy image--cover">
                         <img data-src="@img/sales-2.jpg" class="image lazy__item" alt="">
                     </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
                 </div>
-                <div class="sales__content">
-                    <div class="name">Комплексная чистка зубов ультразвуком и Air Flow импортными материалами с
-                        фторлаком</div>
-                    <div class="price">5 000 ₽</div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
                 </div>
             </article>
             <article class="sales__item">
@@ -35,10 +61,25 @@
                     <picture class="lazy image--cover">
                         <img data-src="@img/sales-3.jpg" class="image lazy__item" alt="">
                     </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
                 </div>
-                <div class="sales__content">
-                    <div class="name">Премиум имплант “Название импланта” (Швеция)</div>
-                    <div class="price">40 000 ₽</div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
                 </div>
             </article>
             <article class="sales__item">
@@ -46,12 +87,28 @@
                     <picture class="lazy image--cover">
                         <img data-src="@img/sales-4.jpg" class="image lazy__item" alt="">
                     </picture>
+                    <span class="stock">10%</span>
+                    <time datetime="" class="date">30-09-2025</time>
                 </div>
-                <div class="sales__content">
-                    <div class="name">Премиум имплант “Название импланта” (Швеция)</div>
-                    <div class="price">40 000 ₽</div>
+                <div class="sales__wrapper">
+                    <div class="sales__content">
+                        <div class="name">Скидка 10% на ортопедическое лечение!</div>
+                        <div class="date__time">Срок действия акции: 30-09-2025</div>
+                        <div class="exerpt">Скидка 10% на ОРТОПЕДИЧЕСКОЕ лечение - на всё съемное и несъёмное
+                            протезирование, за исключением установки временных
+                            абатментов и абатментов Multi-Unit. * Подробную информацию  уточняйте у администраторов
+                            клиник.
+                            ** Скидки и предложения
+                            по акциям не сумм...</div>
+                    </div>
+                    <div class="sales__btns">
+                        <button type="submit" class="btn-form"
+                            data-name="Скидка 10% на ортопедическое лечение!">Записаться</button>
+                        <a href="#" class="link-accent">Подробнее</a>
+                    </div>
                 </div>
             </article>
+
         </div>
         <div class="sections__footer">
             <a href="#">Все акции клиники</a>
