--- a/src/scss/components/_sales.scss
+++ b/src/scss/components/_sales.scss
@@ -3,6 +3,10 @@
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
 		gap: 30px;
+		@media (max-width: 1740px) {
+			grid-template-columns: repeat(3, 1fr);
+			gap: 20px;
+		}
 
 		@media (max-width: 1360px) {
 			grid-template-columns: repeat(2, 1fr);
@@ -15,49 +19,110 @@
 		}
 	}
 	&__item {
-		border-radius: 3px;
-		border: 1px solid #eaf3fa;
+		border-radius: 10px;
+		border: 1px solid #e4e4e4;
+		overflow: hidden;
 		background: #fff;
 		display: flex;
 		flex-direction: column;
+		@media (any-hover: hover) {
+			&:hover {
+				picture {
+					transform: scale(1.1);
+				}
+			}
+		}
 	}
 	&__media {
 		flex: 0 0 auto;
+		overflow: hidden;
+		position: relative;
 		picture {
-			height: 320px;
-
+			height: 250px;
+			overflow: hidden;
+			transition: all 0.3s ease 0s;
 			@media (max-width: 1740px) {
 				height: 250px;
 			}
 		}
-	}
-	&__content {
-		padding: 24px 32px 32px 32px;
-		flex: 1 0 auto;
-		display: flex;
-		flex-direction: column;
-		.name {
-			margin-bottom: auto;
-			color: $mainColor;
-			font-size: 24px;
+
+		.stock {
+			position: absolute;
+			top: 26px;
+			left: 12px;
+			padding: 4px 16px;
+			color: #fff;
+			background-color: $accentColor;
+			font-family: BebasNeueCyrillic;
+			border-radius: 20px;
+			font-size: 35px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			text-transform: uppercase;
+		}
+		.date {
+			position: absolute;
+			left: 12px;
+			bottom: 23px;
+			color: #fff;
+			font-size: 14px;
 			font-style: normal;
 			font-weight: 300;
-			line-height: 140%;
-			letter-spacing: 0.72px;
+			line-height: normal;
+			letter-spacing: 0.42px;
+		}
+	}
+	&__wrapper {
+		padding: 24px 32px;
+		display: flex;
+		flex-direction: column;
+		height: 100%;
 
+		@media (max-width: $tablet) {
+			padding: 20px;
+		}
+	}
+	&__content {
+		flex: 1 0 auto;
+
+		.name {
+			color: #000;
+			font-size: 22px;
+			font-style: normal;
+			font-weight: 300;
+			line-height: normal;
+			letter-spacing: 0.66px;
+			margin-bottom: 10px;
 			@media (max-width: 1740px) {
 				font-size: 20px;
 			}
 		}
-		.price {
-			margin-top: 15px;
-			color: $color-title;
-			font-family: BebasNeueCyrillic;
-			font-size: 40px;
+
+		.date__time {
+			color: $accentColor;
+			font-size: 16px;
 			font-style: normal;
-			font-weight: 400;
-			line-height: 150%;
-			text-transform: uppercase;
+			font-weight: 300;
+			line-height: normal;
+			letter-spacing: 0.48px;
+			margin-bottom: 10px;
 		}
+		.exerpt {
+			color: #737f87;
+			font-size: 18px;
+			font-style: normal;
+			font-weight: 300;
+			line-height: normal;
+			letter-spacing: 0.54px;
+		}
+	}
+
+	&__btns {
+		margin-top: 20px;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		align-items: center;
+		gap: 15px;
 	}
 }
